--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Techie Bootstrap Template - Index</title>
+  <title>M R Securty Force | A First gClass Security Provider</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -264,8 +264,7 @@ on the growing security service industries, we maintain a dynamic and versatile 
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          </div>
 
         <div class="row">
           <div class="col-lg-6">
@@ -381,7 +380,7 @@ on the growing security service industries, we maintain a dynamic and versatile 
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+           
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
